# fastapi-practice

./: main.py  pyproject.toml
