[tool.poetry]
name = "leo-fastapi"
version = "0.1.0"
description = "experiment with fastapi"
authors = ["leo <emmandeg@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvloop = "0.15.0"
uvicorn = "^0.17.4"
python-multipart = "^0.0.5"
httpie = "^3.0.2"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
